Improve contrast to fix accessibility issues

--- a/src/assets/css/_components.css
+++ b/src/assets/css/_components.css
@@ -4,15 +4,17 @@
   border-radius: 10px;
   border: 1px solid transparent;
   padding: var(--padding, var(--space-s-1));
-  background-color: var(--color-bg, var(--color-primary));
+  padding-bottom: var(--padding, var(--space-xs));
+  background-color: var(--color-bg, color-mix(in srgb, #000 35%, var(--color-primary)));
   color: var(--color-text, var(--color-light));
   font-weight: var(--text-semibold);
   letter-spacing: var(--tracking-s);
   text-transform: uppercase;
   cursor: pointer;
-  box-shadow: inset 0 -4px 0 0 rgb(0 0 0 / 9.09%);
+  box-shadow: 0 4px 0 0 color-mix(in srgb, #000 45%, var(--color-primary));
   text-wrap: balance;
   line-height: var(--leading-default);
+  position: relative;
 }
 
 @media (hover: hover) {
@@ -20,6 +22,12 @@
     background-color: color-mix(in srgb, #000 20%, var(--color-primary));
     transition: background-color 0.2s;
   }
+}
+
+.button:active {
+  box-shadow: none;
+  border-color: color-mix(in srgb, #000 45%, var(--color-primary));
+  top: 4px;
 }
 
 .card {
@@ -36,11 +44,11 @@
 }
 
 .disclaimer {
-  color: var(--color-text, var(--color-dark-tint));
+  color: var(--color-text, var(--color-dark));
   text-align: center;
   line-height: var(--leading-smalltext);
   font-size: var(--text-xs);
-  font-weight: var(--text-medium);
+  /* font-weight: var(--text-medium); */
 }
 
 .disclaimer :where(p) {
@@ -54,7 +62,7 @@
 .disclaimer :where(a) {
   text-decoration: none;
   font-weight: var(--text-bold);
-  color: var(--color-tomato);
+  color: color-mix(in srgb, #000 30%, var(--color-tomato));
 }
 
 @media (hover: hover) {
